--- a/index.css
+++ b/index.css
@@ -49,3 +49,8 @@ h1, h2, h3, h4, h5, h6, p, a, button {
 	padding-left: 40px;
 	padding-right: 40px;
 }
+
+.contact-us-buttons button svg {
+	height: 24px;
+	width: 24px;
+}
