--- a/index.css
+++ b/index.css
@@ -50,12 +50,23 @@ h1, h2, h3, h4, h5, h6, p, a, button {
 	padding-right: 40px;
 }
 
+.contact-us-buttons {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+}
+
 .contact-us-buttons button svg {
 	height: 24px;
 	width: 24px;
 }
 
 @media only screen and (max-width: 730px) {
+	.contact-us-buttons {
+		flex-direction: column;
+	}
+
   .contact-us-buttons button svg {
   	height: 44px;
   	width: 44px;
